--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,15 @@ Package: SpatCorrImage
 Type: Package
 Title: Spatial Adaptive Varying Corraltion Analysis for for Multimodal Neuroimaging Data
 Version: 0.1.0
-Author@R: person(given = "Jian",
+Author: person(given = "Jian",
            family = "Kang",
            role = c("aut", "cre"),
            email = "jiankang@umich.edu")
 Maintainer: Jian Kang <jiankang@umich.edu>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: GRL-2
+Imports: ggplot2, reshape, rlang    
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
