--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Author: person(given = "Jian",
 Maintainer: Jian Kang <jiankang@umich.edu>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-Imports: ggplot2, reshape, rlang    
+Imports: ggplot2, reshape, rlang, igraph, stats    
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
